--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
         </div>
 
         <div class="First-container2">
-
+    <a href="./index2.html">
     <div id="Red-circle">
         <i class="fa fa-plus-circle" style="font-size:40px;color:red"></i>
     </div>
-
+    </a>
+  
     <div id="add-lists">Add List</div>
 
     </div>
     </div>
  <div class="structure">
     <div class="sheet1">
+    
         <div class="box1">
+           <a href="./index1.html">
            <p>Trip to paris</p>
+           </a>
         </div>
 
         <div class="box2">
