--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,9 @@
     <div class="tittle-container2">
         <i class="fa fa-arrow-circle-left"  style="font-size: 48px; color: tomato"></i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <p class="subheading">Back</p>        
+        <a href="./index.html">
+        <p class="subheading">Back</p>
+        </a>        
     </div>
     <div class="box">
         <div class="nextbox">
@@ -30,7 +32,9 @@
             <input type="checkbox" name="todo" id="checking">
             <label for="todo">Pending Task</label>
             </form>
+            <a href="./index3.html">
             <i class="fa fa-plus-circle add-button"style="font-size: 48px; color: tomato"></i>
+            </a>
         </div>
     </div>
   </div>
