--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="sheet1">
     
         <div class="box1">
-           <a href="./index1.html">
-           <p>Trip to paris</p>
+           <a class="decor" href="./index1.html">
+           <p> Trip to paris</p>
            </a>
         </div>
 
