--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
     <div class="tittle-container2">
         <i class="fa fa-arrow-circle-left"  style="font-size: 48px; color: tomato"></i>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./index.html">
+        <a class="decor" href="./index.html">
         <p class="subheading">Back</p>
         </a>        
     </div>
